deployment/manifests/gateway/gateway-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: garage-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: vinesen1/microservice-project-gateway:v4
          ports:
            - containerPort: 8999
