deployment/manifests/gateway/gateway-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: garage-ns
spec:
  ports:
  - port: 8999
    targetPort: 8999
  clusterIP: None
  selector:
    app: gateway-service
