deployment/manifests/gateway/gateway-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: garage-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: garage.com   
      http:
        paths:
          - path: /  
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8999
